Apparently white space is not ignored for inline-block elements. This breaks any grid layout that has white-space between columns. Adding negative letter-spacing to eq-parent fixes this.

--- a/gato-lib/src/main/resources/gato-lib/css/grid.scss
+++ b/gato-lib/src/main/resources/gato-lib/css/grid.scss
@@ -62,3 +62,10 @@ $collist : 2 3 4 5 6 8 12;
 .eq-parent[min-width~="1200px"] > * {
   @include eq-cols('xl');
 }
+
+.eq-parent {
+  letter-spacing: -1rem;
+}
+.eq-parent > * {
+  letter-spacing: normal;
+}
